@@ -1,0 +1,6 @@
+#include <stdio.h>
+
+int main(){
+   printf("hello world in C Programming Language\n");
+   return 0; 
+}
