@@ -1,3 +1,7 @@
+2024-06-30  hwpplayer1  <hwpplayer1@debian>
+
+	* c-basic/helloworld.c: hello world example
+
 2024-02-19  Mert Gör  <mertgor@masscollabs.xyz>
 
 	* c-basic/C.pdf: Fonksiyonların Parametre Değişkenleri sayfa 27'deyiz
